// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SpotlightRow/> should highlight the row 1`] = `
<div>
  <a
    class="container selected"
    href="/app/foo"
  >
    <div
      class="infoContent"
    >
      <div
        class="infoHeader"
      >
        <span
          class="title"
        >
          This is the title
        </span>
        <div
          class="separator"
        />
        <span
          class="info"
        >
          And this is the info!
        </span>
        <div
          class="wrapper arrowIcon"
        >
          ↩
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`<SpotlightRow/> should render with icon 1`] = `
<div>
  <a
    class="container"
    href="/app/foo"
  >
    <div
      class="infoContent"
    >
      <div
        class="infoHeader"
      >
        <div
          class="icon"
        >
          🚀
        </div>
        <span
          class="title"
        >
          This is the title
        </span>
        <div
          class="separator"
        />
        <span
          class="info"
        >
          And this is the info!
        </span>
      </div>
    </div>
  </a>
</div>
`;

exports[`<SpotlightRow/> should render with minimal props 1`] = `
<div>
  <a
    class="container"
    href="/app/foo"
  >
    <div
      class="infoContent"
    >
      <div
        class="infoHeader"
      >
        <span
          class="title"
        >
          This is the title
        </span>
        <div
          class="separator"
        />
        <span
          class="info"
        >
          And this is the info!
        </span>
      </div>
    </div>
  </a>
</div>
`;

exports[`<SpotlightRow/> should shrink info flex container 1`] = `
<div>
  <a
    class="container shrinkInfo"
    href="/app/foo"
  >
    <div
      class="infoContent"
    >
      <div
        class="infoHeader"
      >
        <span
          class="title"
        >
          This is the title
        </span>
        <div
          class="separator"
        />
        <span
          class="info"
        >
          And this is the info!
        </span>
      </div>
    </div>
  </a>
</div>
`;
